--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "dev:ssr": "ng run front-test:serve-ssr",
     "serve:ssr": "node dist/front-test/server/main.js",
     "build:ssr": "ng build && ng run front-test:server",
-    "prerender": "ng run front-test:prerender"
+    "prerender": "ng run front-test:prerender",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -49,6 +52,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "cypress": "latest"
   }
 }
