--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
+    "@cypress/schematic": "^1.7.0",
     "@ngrx/schematics": "^13.2.0",
     "@nguniversal/builders": "^13.1.1",
     "@types/express": "^4.17.0",
